# RNACI

./: .gitignore  COPYING.txt  ChangeLog  DESCRIPTION  LICENSE  LICENSE.md  Makefile  NAMESPACE  README  README.md  cleanup  config.status  configure  configure.ac
R/: RNACI.r  examples.r  flags.r  get_conf.r  tests.r
Rpkg/: DESCRIPTION  NAMESPACE  README.md  cleanup
Rpkg/R/: dataframes.r  examples.r  extptr.r  lists.r  tests.r  vectors.r
Rpkg/man/: RNACI.Rd  cppflags.Rd  ldflags.Rd
Rpkg/src/: RNACI.h  RNACI2.h  complex_a.c  complex_b.c  dataframes.c  extptr.c  lists.c  misc.c  vectors.c  zzz_examples.c  zzz_tests.c
Rpkg/tests/: tests.r  valgrind.r
Rpkg/vignettes/include/: 00-acknowledgement.tex  00-copyright.tex  titlepage.tex
doc/: build_pdf.sh
doc/cover/: cover.tex
doc/include/: 03-specification.tex  04-use.tex  05-questions.tex  preamble.tex
inst/: CITATION  CITATION~
inst/doc/: SEXPtools-guide.Rnw
man/: 00-RNACI-package.Rd  RNACI.Rd  cppflags.Rd  zzz_internal.Rd
src/: .SLmake.inc.swp  API.h  Makevars  Makevars.in  Makevars.win  RNACI.h  SEXPtools.h  SLmake.inc  SLmake.inc.org  alloc.c  build_type.h  floats.c  install.libs.R  internal.h  misc.c  package_examples.c  package_tests.c  printing.c  structures_dataframes.c  structures_lists.c  structures_misc.c  tests.c  zzz_examples.c  zzz_tests.c
src/Rtools/: Rtools.h  alloc.c  misc.c  printing.c  structures_dataframes.c  structures_lists.c  structures_misc.c
src/SEXPtools/: Makefile  SEXPtools.h  alloc.c  alloc.oo  c11.c  floats.c  logical.c  misc.c  misc.oo  ompsupport.h  ompversion.h  printing.c  printing.oo  structures_dataframes.c  structures_dataframes.oo  structures_lists.c  structures_lists.oo  structures_misc.oo
src/tests/: tests.c
tests/: tests.r  valgrind.r
utils/: build.sh  build_ho.sh
utils/files/: license.txt
vignettes/: RNACI-guide.Rnw  SEXPtools-guide.Rnw  SEXPtools-guide.aux  SEXPtools-guide.out  SEXPtools-guide.toc  build_pdf.sh
vignettes/cover/: build_cover.sh  cover.tex
vignettes/include/: 00-acknowledgement.tex  00-copyright.tex  01-intro.tex  01-introduction.tex  02-linking.tex  02-use.tex  03-questions.tex  03-specification.tex  04-use.tex  05-questions.tex  preamble.tex
